# Solmate

./: Cargo.toml
certificate_generator/: toIpfsapi.py
program-rust/.svn/: wc.db
program-rust/src/: lib.rs
src/: lib.rs
