[package]
name = "trialsolanaprogram"
version = "0.1.0"
authors = ["aniketdixit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.7.1"

[dev-dependencies]
solana-program-test = "=1.7.1"
solana-sdk = "=1.7.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]